<resources>
    <string name="com.crashlytics.android.build_id">bfb5c1df-9c5f-4c17-9dc7-75472b9153eb</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="add_appointment">Tap to add another appointment</string>
    <string name="app_name">E-FOIA</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="calendar_view">Calendar View</string>
    <string name="check_foia_status">Check FOIA Status</string>
    <string name="closed_date">Closed Date:</string>
    <string name="config_fragment_not_found">404 Fragment not Found</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="day_name_format">EEE</string>
    <string name="decline">Decline</string>
    <string name="dialog_cancel_confirm">Your information will not be saved. Do you want to continue?</string>
    <string name="dialog_delete_confirm">Are you sure you want to delete?</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="empty" />
    <string name="enter_request_number">Enter Request Number</string>
    <string name="est_del_date">Estimated Delivery Date:</string>
    <string name="evenn_title_text_line_2">CALENDAR</string>
    <string name="event_details_location_label_text">Location:</string>
    <string name="event_details_title_text">Event Details</string>
    <string name="event_title_text_line_1">EVENT</string>
    <string name="events_title_text">Events</string>
    <string name="exemptions_desc">FOIA Exemptions</string>
    <string name="exemptions_title">Exemptions</string>
    <string name="fee_desc">FOIA Fee Structure &amp; Waivers</string>
    <string name="fee_title">Fee Structure</string>
    <string name="fill_data_hint">Please fill all information before saving!</string>
    <string name="five_steps_screen_title">5 Steps</string>
    <string name="five_steps_title_text">Five Steps to File a FOIA Request</string>
    <string name="foia_status_desc">DHS FOIA Submission Status</string>
    <string name="foia_status_title">Check Status</string>
    <string name="font_helvetica_bd">helvetica_bd.ttf</string>
    <string name="font_helvetica_cnd_bd">helvetiva_cnd_bd.ttf</string>
    <string name="font_helvetica_cnd_blk">helvetica_cnd_blk.ttf</string>
    <string name="font_helvetica_lig_it">helvetica_lt_it.ttf</string>
    <string name="font_helvetica_med">helvetica_med.ttf</string>
    <string name="font_helvetica_reg">helvetica_reg.ttf</string>
    <string name="font_nexa_reg">nexa_slab_regular.otf</string>
    <string name="fragment_calendar_appointment_date">Appointment Date:</string>
    <string name="fragment_calendar_date">Date:</string>
    <string name="fragment_calendar_date_hint">Enter appointment date here</string>
    <string name="fragment_calendar_location">Location:</string>
    <string name="fragment_calendar_location_hint">Enter location here</string>
    <string name="fragment_calendar_notes">Notes:</string>
    <string name="fragment_calendar_notes_hint">Enter notes here</string>
    <string name="fragment_calendar_notification">Set Your Notification Tone:</string>
    <string name="fragment_calendar_notification_custom">Custom</string>
    <string name="fragment_calendar_notification_default">Default</string>
    <string name="fragment_calendar_notification_none">None</string>
    <string name="fragment_calendar_reminder">Reminder:</string>
    <string name="fragment_calendar_time">Time:</string>
    <string name="fragment_calendar_time_hint">Enter time here</string>
    <string name="fragment_calendar_type">Type:</string>
    <string name="fragment_calendar_type_hint">Enter type here</string>
    <string name="fragment_home_feature_text">"Keeping your multi-channel
world in reach"</string>
    <string name="fragment_list_unavailable_content">There is no content available for this!</string>
    <string name="fragment_profile_age">Age</string>
    <string name="fragment_profile_done">ALL DONE</string>
    <string name="fragment_profile_email">Email</string>
    <string name="fragment_profile_female">Female</string>
    <string name="fragment_profile_first_name">First Name</string>
    <string name="fragment_profile_header_text">"Let's get some basic info from you first."</string>
    <string name="fragment_profile_header_text_detail">GOOD TO SEE YOU</string>
    <string name="fragment_profile_last_name">Last Name</string>
    <string name="fragment_profile_male">Male</string>
    <string name="fragment_profile_unknown">Unknown</string>
    <string name="fragment_surveys_finish_button">Finish Survey</string>
    <string name="hello_world">Hello world!</string>
    <string name="hour_minute_format">hh:mm a</string>
    <string name="how_to_desc">The Freedom information Act provides for the full disclosure of agency records and information to the public unless that information is exempted under clearly delineated statutory language.</string>
    <string name="how_to_title">How To...</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="library_button">FOIA Library</string>
    <string name="library_desc">The Freedom of information Act (FOIA) requires agencies to make various types of records available for public inspection in both paper and electronic form. These records are available through the DHS</string>
    <string name="library_title_text">FOIA Library</string>
    <string name="limits_desc">FOIA Limits &amp; Exceptions</string>
    <string name="limits_title">FOIA Limits</string>
    <string name="list_view">List View</string>
    <string name="location">Location:</string>
    <string name="maps_api_key">AIzaSyBfkOw5wT4iKNsBgkvaS8LHn8GFo5_78Cw</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="no_blank">Please fill all the items.</string>
    <string name="note">Note:</string>
    <string name="privacy_act_desc_text">File A Privacy Act Request</string>
    <string name="privacy_act_line1">The Privacy Act serves to balance the government’s need to maintain information about individuals with the rights of individuals to be protected against unwarranted invasions of their privacy stemming from federal agencies’collection, maintenance, use, and disclosure of personal information about them.</string>
    <string name="privacy_act_line_2">Individuals may request access to information about themselves, request amendment or correction of those records, and request an accounting of disclosures of their records by the Department.</string>
    <string name="privacy_act_title">Privacy Act</string>
    <string name="privacy_policy_text_title">Privacy Policy</string>
    <string name="processing_desc">FOIA Processing</string>
    <string name="processing_title">Processing</string>
    <string name="received_date">Received Date:</string>
    <string name="remind">REMIND</string>
    <string name="repeat">REPEAT</string>
    <string name="request_number_label">Request Number:</string>
    <string name="request_status">Request Status:</string>
</resources>