<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/fragment_event_detail_lyt_buttons" android:background="@color/bg_tabbar_tool_bar" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_alignParentBottom="true">
        <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/fragment_event_detail_btn_delete" android:background="@color/bg_button_edit" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/button_delete" android:layout_weight="1.0" />
        <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/fragment_event_detail_btn_edit" android:background="@color/bg_button_save" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/button_edit" android:layout_weight="1.0" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/fragment_event_detail_lyt_buttons">
        <LinearLayout android:orientation="vertical" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fragment_calendar_type" />
                <EditText android:textSize="16.0sp" android:textColorHint="@color/text_hint_color" android:id="@id/fragment_event_detail_et_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_calendar_type_hint" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fragment_calendar_appointment_date" />
                <TextView android:textSize="16.0sp" android:textColorHint="@color/text_hint_color" android:id="@id/fragment_event_detail_et_date" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_calendar_date_hint" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fragment_calendar_location" />
                <AutoCompleteTextView android:textSize="16.0sp" android:textColorHint="@color/text_hint_color" android:id="@id/fragment_event_detail_et_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_calendar_location_hint" android:completionThreshold="1" android:inputType="textCapSentences" android:imeOptions="actionNext" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fragment_calendar_time" />
                <TextView android:textSize="16.0sp" android:textColorHint="@color/text_hint_color" android:id="@id/fragment_event_detail_et_time" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_calendar_time_hint" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fragment_calendar_notes" />
                <EditText android:textSize="16.0sp" android:textColorHint="@color/text_hint_color" android:id="@id/fragment_event_detail_et_notes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_calendar_notes_hint" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="15.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_calendar_reminder" android:layout_weight="1.0" android:layout_centerVertical="true" />
                <Spinner android:gravity="center" android:id="@id/fragment_event_detail_spn_remind" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/fragment_calendar_event_detail_lyt_notificationTone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/fragment_event_detail_tv_tone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/fragment_calendar_notification" />
                <RadioGroup android:orientation="horizontal" android:id="@id/fragment_calendar_event_detail_rgroup_tone" android:layout_width="fill_parent" android:layout_height="40.0dip">
                    <RadioButton android:id="@id/fragment_calendar_event_detail_rbtn_tone_none" android:tag="none" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fragment_calendar_notification_none" android:layout_weight="1.0" />
                    <RadioButton android:id="@id/fragment_calendar_event_detail_rbtn_tone_default" android:tag="default" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:text="@string/fragment_calendar_notification_default" android:layout_weight="1.0" />
                    <RadioButton android:id="@id/fragment_calendar_event_detail_rbtn_tone_custom" android:tag="custom" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fragment_calendar_notification_custom" android:layout_weight="1.0" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar android:id="@id/fragment_event_detail_pb" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
</RelativeLayout>