<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/CR_Theme_Profile_Fragment"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/image_header_lyt" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="220.0dip">
            <ImageView android:id="@id/fragment_profile_iv_image" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/img_profile" android:scaleType="fitCenter" />
            <TextView android:textColor="@color/app_secondary_color" android:id="@id/get_info_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_profile_header_text" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
            <TextView android:textColor="@color/app_secondary_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_profile_header_text_detail" android:layout_above="@id/get_info_prompt" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:layout_weight="0.6">
            <EditText android:id="@id/fragment_profile_et_fName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_profile_first_name" android:capitalize="sentences" android:inputType="textCapSentences" style="@style/CR_Theme_Profile_Fragment.EditText" />
            <EditText android:id="@id/fragment_profile_et_lName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_profile_last_name" android:capitalize="sentences" android:inputType="textCapSentences" style="@style/CR_Theme_Profile_Fragment.EditText" />
            <EditText android:id="@id/fragment_profile_et_age" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_profile_age" android:inputType="numberDecimal" style="@style/CR_Theme_Profile_Fragment.EditText" />
            <TextView android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" />
            <RadioGroup android:orientation="horizontal" android:id="@id/fragment_profile_rgrp_gender" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/email">
                <RadioButton android:textColor="@color/app_secondary_color" android:id="@id/fragment_profile_rbtn_male" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fragment_profile_male" android:layout_weight="1.0" />
                <RadioButton android:textColor="@color/app_secondary_color" android:id="@id/fragment_profile_rbtn_female" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fragment_profile_female" android:layout_weight="1.0" />
                <RadioButton android:textColor="@color/app_secondary_color" android:id="@id/fragment_profile_rbtn_unknown" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fragment_profile_unknown" android:layout_weight="1.0" />
            </RadioGroup>
            <EditText android:id="@id/fragment_profile_et_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fragment_profile_email" android:inputType="textEmailAddress" style="@style/CR_Theme_Profile_Fragment.EditText" />
            <Button android:id="@id/fragment_profile_btn_done" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="15.0dip" android:text="@string/fragment_profile_done" style="@style/CR_Theme_Profile_Fragment.Button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>