<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="16.0sp" android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/fragment_calendar_type" />
        <TextView android:id="@id/row_calendar_event_tv_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:singleLine="true" style="@style/CalendarTitle" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="16.0sp" android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/fragment_calendar_date" />
        <TextView android:id="@id/row_calendar_event_tv_date" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:singleLine="true" style="@style/CalendarTitle" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="16.0sp" android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/fragment_calendar_location" />
        <TextView android:id="@id/row_calendar_event_tv_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:singleLine="true" style="@style/CalendarTitle" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="16.0sp" android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/fragment_calendar_time" />
        <TextView android:id="@id/row_calendar_event_tv_time" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:singleLine="true" style="@style/CalendarTitle" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="16.0sp" android:gravity="right" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/fragment_calendar_notes" />
        <TextView android:id="@id/row_calendar_event_tv_note" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:singleLine="true" style="@style/CalendarTitle" />
    </LinearLayout>
</LinearLayout>