<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/efoia_bg" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/white" android:id="@id/check_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/foia_status_title" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <ImageButton android:id="@id/imageButton7" android:background="@drawable/back_button" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:onClick="goBack" android:contentDescription="Back" android:layout_alignParentStart="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/white" android:id="@id/check_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/foia_status_desc" android:layout_below="@id/imageButton7" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="49.0dip" android:layout_below="@id/imageButton7" android:layout_centerHorizontal="true">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0" android:layout_weight="1.0">
            <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_gravity="top" android:id="@id/enter_req_number_label" android:paddingRight="20.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/enter_request_number" android:layout_weight="0.4" />
            <EditText android:textSize="15.0dip" android:layout_gravity="fill_vertical" android:id="@id/request_number_edit_text" android:background="@drawable/entry" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_weight="0.6" android:contentDescription="Enter the FOIA Request Number here" />
        </LinearLayout>
        <Button android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/check_status_button" android:background="@drawable/button_border" android:layout_width="wrap_content" android:layout_height="44.0dip" android:layout_marginTop="20.0dip" android:text="@string/check_foia_status" android:layout_weight="1.0" android:onClick="onClick" style="?android:attr/borderlessButtonStyle" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="40.0dip" android:layout_weight="1.0">
            <TextView android:textSize="15.0dip" android:textColor="@color/white" android:layout_gravity="left" android:id="@id/request_number_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/request_number_label" android:layout_weight="0.4" />
            <TextView android:textSize="15.0dip" android:textColor="@color/white" android:layout_gravity="right" android:id="@id/request_number" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="1" android:layout_weight="0.6" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="15.0dip" android:textColor="@color/white" android:layout_gravity="left" android:id="@id/recv_date_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/received_date" android:layout_weight="0.4" />
            <TextView android:textSize="15.0dip" android:textColor="@color/white" android:layout_gravity="right" android:id="@id/received_date" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_weight="0.6" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="15.0dip" android:textColor="@color/white" android:layout_gravity="left" android:id="@id/req_status_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/request_status" android:layout_weight="0.4" />
            <TextView android:textSize="15.0dip" android:textColor="@color/white" android:layout_gravity="right" android:id="@id/request_status" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_weight="0.6" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="15.0dip" android:textColor="@color/white" android:layout_gravity="left" android:id="@id/est_del_date_label" android:paddingRight="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/est_del_date" android:layout_weight="0.4" />
            <TextView android:textSize="15.0dip" android:textColor="@color/white" android:layout_gravity="right" android:id="@id/delivery_date" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_weight="0.6" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_gravity="left" android:id="@id/closed_date_label" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/closed_date" android:layout_weight="0.4" />
            <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_gravity="right" android:id="@id/closed_date" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_weight="0.6" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>